# My-C-projects

./:  1 million times throwing a toss.c  $ between inputs.c  1st question.c  4 operator for 2 numbers.c  4 quarter.c  Bubble  sort.c  Bubble sort.c  CMakeLists.txt  Calculator.c  Converting a number to Roman form.c  Empty diamond.c  a number on the power of a number.c  about all my projects.c  area and perimeter of a circle.c  area and perimeter of a rectangle.c  arethematic sequence.c  average number of students.c  average of 3 numbers.c  average of numbers.c  bank notes.c  calculating the pi .c  calculatling of e^x.c  centigrade to fahrenheit.c  changing degree and radian.c  char +num.c  checking of a triangle.c  checking of right triangle.c  chess table.c  codeblocks practice.c  company salary counter.c  complete number.c  compound interest.c  convert of a day to year, month, week, hour, minute and second.c  counter of positive and negative numbers.c  countner of a number in a number .c  date and time.c  day ,week ,month year.c  day, week, month,year.c  difference between while and for loop.c  distance between 2 point.c  (+3 more)
