cmake_minimum_required(VERSION 3.27)
project(MY_C_PROJECTS)

set(CMAKE_CXX_STANDARD 14)

add_executable(MY_C_PROJECTS
        "1st question.c"
        "4 operator for 2 numbers.c"
        "4 quarter.c"
        "area and perimeter of a circle.c"
        "area and perimeter of a rectangle.c"
        "arethematic sequence.c"
        "average number of students.c"
        "average of 3 numbers.c"
        "bank notes.c"
        "Bubble  sort.c"
        Calculator.c
        "changing degree and radian.c"
        "char +num.c"
        "codeblocks practice.c"
        "convert of a day to year, month, week, hour, minute and second.c"
        "counter of positive and negative numbers.c"
        "date and time.c"
        "day ,week ,month year.c"
        "day, week, month,year.c"
        "distance between 2 point.c"
        "distinguish being odd and even.c"
        "distinguish odd and even 2.c"
        "Factorail of a number.c"
        factorial.c
        "grade of university.c"
        "hour minuts and second.c"
        "leap year.c"
        "learnong and tests of that.c"
        "max number between 5 num.c"
        "max number between 5 numbers.c"
        "odd and even numbers less than a number.c"
        "odd numbers less than a number.cpp"
        "Odd numbers less than anumber.c"
        "positive and negative coounter.c"
        "about all my projects.c"
        "practice 3.c"
        PRACTICE.c
        "Prime Numbers Check.c"
        "print a huge c++.c"
        "print a huge Z.c"
        "prints a number from 0 to input number.c"
        "quadratic equation.c"
        "Reverse of  5 character.c"
        "sum of squared number.c"
        triangle.c
        "weight average of my first symester.c"
        "practice 4.c")
